--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     --dark-gray: #515151;
     --black: #000000;
     --white: #FFFFFF;
-    --gray: #EEEEEE;
+    --gray: #d1d1d1;
 }
 
 body {
@@ -91,4 +91,48 @@ audio {
     -webkit-box-shadow: 0px 0px 16px 7px rgba(0,0,0,0.51) inset;
     -moz-box-shadow: 0px 0px 16px 7px rgba(0,0,0,0.51) inset;
     font-weight: bold;
+}
+main {
+    background-color: var(--dark-gray);
+    padding: 4rem;
+}
+.container {
+    border: 1px solid white;
+    padding: 2rem;
+    display: grid;
+    gap: 8rem;
+    grid-template-columns: repeat(3, 1fr);
+    background-color: var(--black);
+    color: var(--gray);
+    text-align: left;
+}
+.container-section {
+    grid-column: 1 / 3;
+}
+.container h2, p{
+    margin-bottom: 1rem;
+}
+footer {
+    background-color: var(--black);
+    padding: 2rem;
+    color: var(--gray);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+}
+.socialnetwork {
+    height: 0.4rem;
+}
+footer .socialnetwork {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+footer .socialnetwork a:hover {
+    font-size: 3rem;
+    color: var(--light_blue);
+    display: flex;
+    align-items: center;
+    text-decoration: none;
 }
