--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,9 @@
     --gray: #d1d1d1;
     */
 }
-
 body {
     font-family: 'Montserrat', sans-serif;
 }
-
 /* apply a natural box layout model to all elements, but allowing components to change */
 html {
     box-sizing: border-box;
@@ -25,28 +23,33 @@ html {
 *, *:before, *:after {
     box-sizing: inherit;
 }
-
 body h1, h2, h3, h4, h5, h6, p, ul {
     margin: 0;
     padding: 0;
 }
+
+/* Inicio del estilo para el header */
 header {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     padding: 1.5rem 6rem;
     background-color: var(--dark);
-}
-.tittle {
-    display: flex;
-    flex-direction: column;
     gap: 2rem;
 }
-.tittle h1 {
+.tittle {
     font-size: 3rem;
     color: var(--white);
 }
+.sub-tittle {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+#burguer-menu {
+    display: none;
+}
+
 audio {
     width: 210px;
     height: 32px;
@@ -98,13 +101,17 @@ audio {
     color: var(--white);
     text-decoration: none;
 }
+
+/* Inicio del estilo para el navbar */
 .navbar {
     background-color: var(--darker-green);
     border-top: 2px solid var(--yellow-green);
     border-bottom: 2px solid var(--yellow-green);
     box-shadow: 0px 0px 8px 8px rgba(0,0,0,0.64);
--webkit-box-shadow: 0px 0px 8px 8px rgba(0,0,0,0.64);
--moz-box-shadow: 0px 0px 8px 8px rgba(0,0,0,0.64);
+    -webkit-box-shadow: 0px 0px 8px 8px rgba(0,0,0,0.64);
+    -moz-box-shadow: 0px 0px 8px 8px rgba(0,0,0,0.64);
+    position: sticky;
+    top: 0;
 }
 .navbar ul {
     display: flex;
@@ -127,6 +134,8 @@ audio {
     color: var(--black);
     font-weight: bold;
 }
+
+/* Inicio del estilo para el main */
 main {
     background-color: var(--dark);
     padding: 4rem;
@@ -151,6 +160,9 @@ main {
 .container h2, p{
     margin-bottom: 1rem;
 }
+
+
+/* Inicio del estilo para el footer */
 footer {
     border-top: 2px solid var(--yellow-green);
     background-color: var(--darker-green);
@@ -176,7 +188,63 @@ footer .socialnetwork a:hover {
     align-items: center;
     text-decoration: none;
 }
+.table {
+    text-align: center;
+    background-color: var(--dark);
+    color: var(--white);
+}
 .table-tittle {
     margin-bottom: 1rem;
     text-align: center;
 }
+/* Mobiles max-width=767px*/
+@media (max-width: 767px) {
+    header {
+        padding: 1rem;
+        align-items: center;
+        gap: 1rem;
+    }  
+    .sub-tittle {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    .sub-tittle .user {
+        display: none;
+    }
+    .navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    #burguer-menu {
+        display: block;
+        font-size: 2.4rem;
+        padding: 0.4rem;
+    }
+    .navbar .menu {
+        display: none;
+    }
+    main {
+        padding: 1rem;
+    }
+    .container {
+        display: flex;
+        flex-direction: column;
+        gap: 0;
+        text-align: center;
+    }
+    .container .container-section article {
+        border-bottom: 1px solid black;
+        padding-bottom: 2rem;
+        margin-bottom: 2rem;
+    }
+    .top-5 {
+        border-top: 1px solid black;
+        padding-top: 2rem;
+        margin-top: 2rem;
+    }
+}
+
+/* Tablets max-width=1023px*/
+/* Desktop min-width=1024px*/
