--- a/css/login.css
+++ b/css/login.css
@@ -70,6 +70,7 @@ header {
 }
 .login-box label {
     margin-bottom: 0.4rem;
+    font-weight: bold;
 }
 .login-box input,
 .login-box h2 {
@@ -87,7 +88,7 @@ header {
 }
 
 .login-box .btn-login {
-    margin-bottom: 0.4rem;
+    margin-bottom: 0.8rem;
 }
 .login-btn {
     display: flex;
