--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ html {
 *, *:before, *:after {
     box-sizing: inherit;
 }
-body h1, h2, h3, h4, h5, h6, p, ul {
+body h1, h2, h3, h4, h5, h6, p, ul, figure {
     margin: 0;
     padding: 0;
 }
@@ -46,10 +46,6 @@ header {
     display: flex;
     justify-content: space-between;
 }
-#burguer-menu {
-    display: none;
-}
-
 audio {
     width: 210px;
     height: 32px;
@@ -102,8 +98,8 @@ audio {
     text-decoration: none;
 }
 
-/* Inicio del estilo para el navbar */
-.navbar {
+/* Inicio del estilo para el menu */
+.menu {
     background-color: var(--darker-green);
     border-top: 2px solid var(--yellow-green);
     border-bottom: 2px solid var(--yellow-green);
@@ -113,27 +109,34 @@ audio {
     position: sticky;
     top: 0;
 }
-.navbar ul {
+#burger-menu {
+    display: none;
+}
+#menu-descktop-displayed {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    margin: 0;
+    padding: 0;
 }
-.navbar ul li {
+#menu-descktop-displayed li {
     list-style: none;
     padding: 1rem;
     display: flex;
     align-items: center;
 }
-.navbar ul li a {
+#menu-descktop-displayed li a {
     color: var(--white);
     text-decoration: none;
+    font-size: 24px;
 }
-.navbar ul li:hover {
+#menu-descktop-displayed li:hover {
     background-color: var(--dark);
     color: var(--black);
     font-weight: bold;
 }
+
 
 /* Inicio del estilo para el main */
 main {
@@ -148,7 +151,7 @@ main {
     -moz-box-shadow: 0px 0px 8px 8px rgba(0,0,0,0.64);
     padding: 2rem;
     display: grid;
-    gap: 8rem;
+    gap: 4rem;
     grid-template-columns: repeat(3, 1fr);
     background-color: var(--darker-green);
     color: var(--gray);
@@ -159,6 +162,12 @@ main {
 }
 .container h2, p{
     margin-bottom: 1rem;
+}
+.container-section {
+    margin-left: 2rem;
+}
+.container-aside {
+    margin-right: 2rem;
 }
 
 
@@ -188,17 +197,15 @@ footer .socialnetwork a:hover {
     align-items: center;
     text-decoration: none;
 }
-.table {
-    text-align: center;
-    background-color: var(--dark);
-    color: var(--white);
-}
 .table-tittle {
     margin-bottom: 1rem;
     text-align: center;
 }
+
+
 /* Mobiles max-width=767px*/
 @media (max-width: 767px) {
+    /* header */
     header {
         padding: 1rem;
         align-items: center;
@@ -212,17 +219,62 @@ footer .socialnetwork a:hover {
     .sub-tittle .user {
         display: none;
     }
-    .navbar {
+
+
+    /* menu */
+    .menu {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    #burguer-menu {
-        display: block;
+    #burger-menu {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         font-size: 2.4rem;
-        padding: 0.4rem;
+        padding: 0;
+        width: 100%;
     }
-    .navbar .menu {
+    #displayable-menu {
+        width: 100%;
+    }
+    #burger-menu i {
+        margin: 0.4rem 0;
+    }
+    #burger-menu-displayed {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+    }
+    #burger-menu-displayed li {
+        list-style: none;
+        width: 100%;
+        height: 4rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #burger-menu-displayed li a {
+        color: var(--white);
+        text-decoration: none;
+        font-size: 24px;
+    }
+    #burger-menu-displayed li:hover {
+        background-color: var(--dark);
+        color: var(--black);
+        font-weight: bold;
+    }
+    .undisplayed {
+        display: none;
+    }
+    .undisplayed:hover {
+        display: block;
+    }
+
+    .menu .menu-descktop {
         display: none;
     }
     main {
@@ -239,11 +291,26 @@ footer .socialnetwork a:hover {
         padding-bottom: 2rem;
         margin-bottom: 2rem;
     }
+    .container-section,
+    .container-aside  {
+        margin-left: 0;
+        margin-right: 0;
+    }
+    
     .top-5 {
         border-top: 1px solid black;
         padding-top: 2rem;
         margin-top: 2rem;
     }
+    iframe,
+    video {
+        width: 260px;
+        height: 130px;
+    }
+    img {
+        width: 220px;
+    }
+    
 }
 
 /* Tablets max-width=1023px*/
